nov 3 morning
